# VideoPicker_iOS

./: .gitignore  README.md
VideoPicker/: ContentView.swift  FrameDetailViewModel.swift  Info.plist  InfoPlistStrings.swift  Localizable.xcstrings  PhotoLibraryService.swift  VideoAssetLoader.swift  VideoDetailView.swift  VideoDetailViewModel.swift  VideoItem.swift  VideoLibraryViewModel.swift  VideoPickerApp.swift  VideoScoringView.swift  VideoScoringViewModel.swift  VideoThumbnailCell.swift
VideoPicker.xcodeproj/: project.pbxproj
VideoPicker/Assets.xcassets/best_badge.imageset/: Contents.json
VideoPicker/en.lproj/: InfoPlist.strings
VideoPicker/ja.lproj/: InfoPlist.strings
VideoPickerTests/: VideoPickerTests.swift
VideoPickerUITests/: VideoPickerUITests.swift  VideoPickerUITestsLaunchTests.swift
android/videopicker-scoring/: build.gradle.kts
android/videopicker-scoring/src/main/cpp/: CMakeLists.txt  vp_jni.cpp
android/videopicker-scoring/src/main/java/com/example/videopickerscoring/: VideoPickerScoring.kt
core/: CMakeLists.txt
core/include/: vp_analyzer.h
core/src/: vp_analyzer.cpp  vp_ffmpeg_decoder.cpp  vp_ffmpeg_decoder.h  vp_metrics.cpp  vp_metrics.h
core/tools/: vp_cli.cpp
docs/: README.md  frame_scoring_api.md  person_blur_opencv_design.md
ios/VideoPickerScoring/: Package.swift  VideoPickerScoring.swift
ios/VideoPickerScoring/Sources/VideoPickerScoring/: VideoPickerScoring.swift
ios/VideoPickerScoring/Sources/VideoPickerScoringCore/: vp_analyzer.cpp  vp_analyzer.h  vp_analyzer_stub.c  vp_metrics.cpp  vp_metrics.h
ios/VideoPickerScoring/Sources/VideoPickerScoringCore/include/: vp_analyzer.h
samples/android/: VideoPickerScoringSample.kt
samples/ios/: VideoPickerScoringSample.swift
